# FinallyEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
Engine/: vcpkg.json
Engine/Shaders/: compile.bat
Engine/Source/AssetManager/: CMakeLists.txt
Engine/Source/AssetManager/Include/AssetManager/: Asset.h  AssetFactory.h  AssetManager.h  AssetManager.inl
Engine/Source/AssetManager/Source/: AssetManager.cpp
Engine/Source/Config/: CMakeLists.txt
Engine/Source/Core/: CMakeLists.txt
Engine/Source/Core/Include/Core/: Engine.h  Window.h
Engine/Source/Core/Include/Core/Assets/Factories/: 3DAssetFactory.h  ShaderAssetFactory.cpp  ShaderAssetFactory.h
Engine/Source/Core/Include/Core/Assets/Types/: Mesh.h  Shader.h  Texture.h
Engine/Source/Core/Include/Core/ECS/: SparseSet.h
Engine/Source/Core/Source/: Engine.cpp  Window.cpp
Engine/Source/Core/Source/Assets/Factories/: ShaderAssetFactory.cpp
Engine/Source/Core/Source/ECS/: SparseSet.cpp
Engine/Source/ECS/: CMakeLists.txt
Engine/Source/ECS/Source/: SparseSet.cpp  SparseSet.h
Engine/Source/Editor/: CMakeLists.txt
Engine/Source/Editor/Include/Editor/: Editor.h  EditorUI.h
Engine/Source/Editor/Source/: Editor.cpp  EditorUI.cpp
Engine/Source/Logging/: CMakeLists.txt
Engine/Source/Logging/Include/Logging/: Logger.h
Engine/Source/Logging/Source/: Logger.cpp
Engine/Source/Main/: CMakeLists.txt
Engine/Source/Main/Source/: Main.cpp
Engine/Source/Math/: CMakeLists.txt
Engine/Source/Math/Include/Math/: Matrix.h  Quaternion.h  Transform.h  Vector.h
Engine/Source/Math/Include/Math/Details/: MatrixDetail.h  NumericalConcept.h  VectorDetail.h
Engine/Source/Math/Source/: Vector.cpp
Engine/Source/Renderer/: CMakeLists.txt
Engine/Source/Renderer/Include/Renderer/: CommandBuffer.h  RenderTarget.h  Renderer.h  ShaderManager.h  Viewport.h  VulkanCommandPool.h  VulkanDevice.h  VulkanFramebuffer.h  VulkanPipeline.h  VulkanQueue.h  VulkanRenderPass.h  VulkanShader.h  VulkanSingleton.h  VulkanViewport.h
Engine/Source/Renderer/Include/Renderer/Primitives/: Material.h  Mesh.h  Shader.h  ShaderResource.h  StaticMesh.h  Texture.h  Vertex.h
Engine/Source/Renderer/Include/Renderer/Shaders/: Shader.h  ShaderManager.h  ShaderTypes.h
Engine/Source/Renderer/Include/Renderer/Vulkan/: VulkanBuffer.h  VulkanCommandBuffer.h  VulkanCommandPool.h  VulkanDescriptors.h  VulkanDevice.h  VulkanFence.h  VulkanFramebuffer.h  VulkanImage.h  VulkanInstance.h  VulkanPipeline.h  VulkanQueue.h  VulkanRenderPass.h  VulkanSampler.h  VulkanSemaphore.h  VulkanShader.h  VulkanSingleton.h  VulkanViewport.h
Engine/Source/Renderer/Include/Renderer/Vulkan/Utilities/: VulkanResource.h
Engine/Source/Renderer/Include/Renderer/imgui/: ImguiRenderer.h  ImguiVulkanRenderer.h  VulkanImgui.h
Engine/Source/Renderer/Source/: CommandBuffer.cpp  RenderTarget.cpp  Renderer.cpp  ShaderManager.cpp  Viewport.cpp  VulkanCommandPool.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanPipeline.cpp  VulkanQueue.cpp  VulkanRenderPass.cpp  VulkanShader.cpp  VulkanSingleton.cpp  VulkanViewport.cpp
Engine/Source/Renderer/Source/Shaders/: Shader.cpp  ShaderManager.cpp
Engine/Source/Renderer/Source/Vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDescriptors.cpp  VulkanDevice.cpp  VulkanFence.cpp  VulkanFramebuffer.cpp  VulkanImage.cpp  VulkanInstance.cpp  VulkanPipeline.cpp  VulkanQueue.cpp  VulkanRenderPass.cpp  VulkanSampler.cpp  VulkanSemaphore.cpp  VulkanShader.cpp  VulkanSingleton.cpp  VulkanViewport.cpp
Engine/Source/Renderer/Source/imgui/: ImguiRenderer.cpp  ImguiVulkanRenderer.cpp  ImguiVulkanShaders.h  VulkanImgui.cpp
Engine/Source/Utilities/: CMakeLists.txt
Engine/Source/Utilities/Include/Utilities/: ConceptUtilities.h  EnumUtilities.h  FileUtilities.h  TemplateUtilities.h
Engine/Source/Utilities/Source/: FileUtilities.cpp
Engine/Source/Utilities/Tests/: EnumUtilitiesTest.cpp
